# BypassCTF

./: README.md
New frontend/: package.json
New frontend/src/: App.jsx  main.jsx
New frontend/src/components/: LeaderBoard.jsx  Navbar.jsx  PasswordField.jsx
New frontend/src/hooks/: useGetDetailHook.js
backend/: .gitignore  README.md  backup_db.py  db.json  level_manager.py  main.py  pyproject.toml  req.txt  score.py  test_level_system.py  user_scorecard.py
backend/levels/: 2.py  base_level.py  level_1.py  level_10.py  level_11.py  level_12.py  level_13.py  level_14.py  level_15.py  level_16.py  level_17.py  level_18.py  level_19.py  level_2.py  level_20.py  level_21.py  level_3.py  level_4.py  level_5.py  level_6.py  level_7.py  level_8.py  level_9.py
frontend/: .env  README.md  index.html  package-lock.json  package.json
frontend/src/: .env  App.jsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FinalSeq.jsx  FinalSequence.jsx  GameLeaderboard.jsx  LeaderBoard.jsx  Maze.jsx  Navbar.jsx  PasswordField.jsx  WhiteLeaderboard.jsx  leaderboard.tsx
frontend/src/data/: passwordLevels.ts
frontend/src/hooks/: useGetDetailHook.js  useGetUserDataHook.ts
frontendNextjs/: package-lock.json  package.json
frontendNextjs/src/app/: layout.tsx  page.tsx  page_nealfun.tsx
frontendNextjs/src/components/: leaderboard.tsx  navbar.tsx
frontendNextjs/src/data/: passwordLevels.ts
